# mcp-llm

./: .gitignore  README.md  cli.py  pyproject.toml
example_config/: config.json
mcp_llm/: __init__.py  client.py  config.py
